@@ -2421,6 +2421,11 @@ static vector<mon_spellbook_type> _mons_spellbook_list(monster_type mon_type)
     case MONS_DEEP_ELF_KNIGHT:
         return { MST_DEEP_ELF_KNIGHT_I, MST_DEEP_ELF_KNIGHT_II };
 
+    case MONS_LICH:
+    case MONS_ANCIENT_LICH:
+        return { MST_LICH_I, MST_LICH_II, MST_LICH_III,
+                 MST_LICH_IV, MST_LICH_V, };
+
     default:
         return { static_cast<mon_spellbook_type>(
                      get_monster_data(mon_type)->sec) };
@@ -2527,240 +2532,6 @@ mon_spell_slot drac_breath(monster_type drac_type)
     return slot;
 }
 
-static const vector<mon_spell_slot> lich_primary_summoner_spells =
-{
-    { SPELL_SUMMON_GREATER_DEMON, 18, MON_SPELL_WIZARD },
-};
-
-static const vector<mon_spell_slot> lich_primary_conjurer_spells =
-{
-    { SPELL_IOOD, 18, MON_SPELL_WIZARD },
-    { SPELL_LEHUDIBS_CRYSTAL_SPEAR, 18, MON_SPELL_WIZARD },
-    { SPELL_CORROSIVE_BOLT, 18, MON_SPELL_WIZARD },
-};
-
-static const vector<mon_spell_slot> lich_secondary_spells =
-{
-    { SPELL_MALIGN_GATEWAY, 12, MON_SPELL_WIZARD },
-    { SPELL_SPELLFORGED_SERVITOR, 12, MON_SPELL_WIZARD },
-    { SPELL_SIMULACRUM, 12, MON_SPELL_WIZARD },
-    { SPELL_POISON_ARROW, 12, MON_SPELL_WIZARD },
-    { SPELL_HAUNT, 12, MON_SPELL_WIZARD },
-    { SPELL_SUMMON_HORRIBLE_THINGS, 12, MON_SPELL_WIZARD },
-    { SPELL_ISKENDERUNS_MYSTIC_BLAST, 12, MON_SPELL_WIZARD },
-    { SPELL_BATTLESPHERE, 12, MON_SPELL_WIZARD },
-    { SPELL_BOLT_OF_DRAINING, 12, MON_SPELL_WIZARD },
-    { SPELL_AGONY, 12, MON_SPELL_WIZARD },
-    { SPELL_BOLT_OF_FIRE, 12, MON_SPELL_WIZARD },
-    { SPELL_FIREBALL, 12, MON_SPELL_WIZARD },
-    { SPELL_BOLT_OF_COLD, 12, MON_SPELL_WIZARD },
-    { SPELL_THROW_ICICLE, 12, MON_SPELL_WIZARD },
-    { SPELL_IRON_SHOT, 12, MON_SPELL_WIZARD },
-    { SPELL_LRD, 12, MON_SPELL_WIZARD },
-    { SPELL_PETRIFY, 12, MON_SPELL_WIZARD },
-    { SPELL_LIGHTNING_BOLT, 12, MON_SPELL_WIZARD },
-    { SPELL_PARALYSE, 12, MON_SPELL_WIZARD },
-    { SPELL_CONFUSE, 12, MON_SPELL_WIZARD },
-    { SPELL_SLOW, 12, MON_SPELL_WIZARD },
-    { SPELL_SLEEP, 12, MON_SPELL_WIZARD },
-};
-
-static const vector<mon_spell_slot> lich_buff_spells =
-{
-    { SPELL_HASTE, 12, MON_SPELL_WIZARD },
-    { SPELL_INVISIBILITY, 12, MON_SPELL_WIZARD },
-    { SPELL_BANISHMENT, 12, MON_SPELL_WIZARD | MON_SPELL_EMERGENCY },
-};
-
-static bool _random_caster_spell_is_used(const monster_spells &spells,
-                                         spell_type spell)
-{
-    for (auto slot : spells)
-        if (slot.spell == spell)
-            return true;
-
-    return false;
-}
-
-static bool _random_caster_has_spell_of_school(const monster_spells &spells,
-                                               spschool_flag_type discipline)
-{
-    for (auto slot : spells)
-        if (spell_typematch(slot.spell, discipline))
-            return true;
-
-    return false;
-}
-
-static bool _random_caster_spell_is_good(const monster_spells &spells,
-                                         spell_type spell,
-                                         int *weights, int total_weight,
-                                         bool use_weights, bool force_conj)
-{
-    if (_random_caster_spell_is_used(spells, spell))
-        return false;
-
-    if (force_conj
-        && !_random_caster_has_spell_of_school(spells, SPTYP_CONJURATION))
-    {
-        return spell_typematch(spell, SPTYP_CONJURATION)
-               && spell != SPELL_BATTLESPHERE
-               && spell != SPELL_SPELLFORGED_SERVITOR;
-    }
-
-    if (!use_weights)
-        return true;
-
-    spschools_type disciplines = get_spell_disciplines(spell);
-    int num_disciplines = count_bits(disciplines);
-
-    for (int exponent = 0; exponent <= SPTYP_LAST_EXPONENT; ++exponent)
-    {
-        const auto bit = spschools_type::exponent(exponent);
-        if (disciplines & bit)
-            if (x_chance_in_y(weights[exponent], total_weight * num_disciplines))
-                return true;
-    }
-
-    return false;
-}
-
-static void _calculate_random_caster_spell_weights(const monster_spells &spells,
-                                                   int *weights,
-                                                   int &total_weight)
-{
-    for (int exponent = 0; exponent <= SPTYP_LAST_EXPONENT; ++exponent)
-        // there are no primary hexes, and hexes are interesting to have on
-        // liches, so give them a slightly higher chance
-        weights[exponent] = (1 << exponent) == SPTYP_HEXES
-        ? SPTYP_LAST_EXPONENT / 4
-        : 1;
-
-    for (auto slot : spells)
-        for (int exponent = 0; exponent <= SPTYP_LAST_EXPONENT; ++exponent)
-        {
-            const auto discipline = spschools_type::exponent(exponent);
-            if (spell_typematch(slot.spell, discipline))
-            {
-                // or else we just get entirely bolts
-                int increment = discipline == SPTYP_CONJURATION
-                ? SPTYP_LAST_EXPONENT / 4
-                : SPTYP_LAST_EXPONENT;
-                weights[exponent] = min(
-                                        weights[exponent] + increment,
-                                        (int)SPTYP_LAST_EXPONENT * 2
-                                        );
-            }
-        }
-
-    total_weight = 0;
-    for (int i = 0; i <= SPTYP_LAST_EXPONENT; ++i)
-        total_weight += weights[i];
-
-}
-
-static void _add_random_caster_spell(monster_spells &spells,
-                                     const vector<mon_spell_slot> *set,
-                                     bool secondary, bool force_conj)
-{
-    int weights[SPTYP_LAST_EXPONENT + 1];
-    int total_weight;
-    const size_t set_len = set->size();
-    _calculate_random_caster_spell_weights(spells, weights, total_weight);
-
-    mon_spell_slot next_spell;
-    do
-    {
-        next_spell = (*set)[random2(set_len)];
-    }
-    while (!_random_caster_spell_is_good(spells, next_spell.spell, weights,
-                                         total_weight, secondary, force_conj));
-
-    next_spell.freq = next_spell.freq - 4 + random2(9);
-    spells.push_back(next_spell);
-}
-
-struct random_caster_spell_def
-{
-    size_t min_spells;
-    size_t max_spells;
-    bool force_second_conj;
-    bool bonus_conj;
-    const vector<mon_spell_slot> *primary_summoner_spells;
-    const vector<mon_spell_slot> *primary_conjurer_spells;
-    const vector<mon_spell_slot> *secondary_spells;
-    const vector<mon_spell_slot> *buff_spells;
-};
-
-static const map<monster_type, random_caster_spell_def> random_caster_spells =
-{
-    {
-      MONS_LICH,
-      {
-        5, 7,
-        true,
-        false,
-        &lich_primary_summoner_spells,
-        &lich_primary_conjurer_spells,
-        &lich_secondary_spells,
-        &lich_buff_spells
-      }
-    },
-    {
-      MONS_ANCIENT_LICH,
-      {
-        5, 7,
-        true,
-        true,
-        &lich_primary_summoner_spells,
-        &lich_primary_conjurer_spells,
-        &lich_secondary_spells,
-        &lich_buff_spells
-      }
-    },
-};
-
-static void _load_random_caster_spells(monster &caster)
-{
-    const auto entry = random_caster_spells.find(caster.type);
-    ASSERT(entry != random_caster_spells.end());
-    const auto def = entry->second;
-
-    const size_t num_spells = random_range(def.min_spells, def.max_spells);
-
-    if (coinflip())
-    {
-        _add_random_caster_spell(caster.spells, def.primary_summoner_spells,
-                                 false, false);
-    }
-    else
-        _add_random_caster_spell(caster.spells, def.primary_conjurer_spells,
-                                 false, false);
-
-    if (def.bonus_conj && coinflip())
-    {
-        _add_random_caster_spell(caster.spells, def.primary_conjurer_spells,
-                                 false, false);
-    }
-
-    const unsigned int max = def.buff_spells > 0 ? num_spells - 1 : num_spells;
-    bool force_conj = def.force_second_conj;
-    while (caster.spells.size() < max)
-    {
-        _add_random_caster_spell(caster.spells, def.secondary_spells,
-                                 true, force_conj);
-        force_conj = false;
-    }
-
-    if (def.buff_spells)
-    {
-        _add_random_caster_spell(caster.spells, def.buff_spells,
-                                 false, false);
-    }
-
-    normalize_spell_freq(caster.spells, caster.get_experience_level());
-}
-
 void mons_load_spells(monster* mon)
 {
     vector<mon_spellbook_type> books = _mons_spellbook_list(mon->type);
@@ -2776,8 +2547,6 @@ void mons_load_spells(monster* mon)
         if (breath.spell != SPELL_NO_SPELL)
             mon->spells.push_back(breath);
     }
-    else if (mon->type == MONS_LICH || mon->type == MONS_ANCIENT_LICH)
-        _load_random_caster_spells(*mon);
 
     if (book == MST_NO_SPELLS)
         return;
