@@ -1156,11 +1156,8 @@ int main(int argc, char* argv[])
 
         string spell_string = construct_spells(spell_lists, damages);
         if (shapeshifter || mon.type == MONS_PANDEMONIUM_LORD
-            || mon.type == MONS_LICH || mon.type == MONS_ANCIENT_LICH
             || mon.type == MONS_CHIMERA
-                   && (mon.base_monster == MONS_PANDEMONIUM_LORD
-                       || mon.base_monster == MONS_LICH
-                       || mon.base_monster == MONS_ANCIENT_LICH))
+                   && (mon.base_monster == MONS_PANDEMONIUM_LORD))
         {
             spell_string = "(random)";
         }
